"Added updated resume in the icon"

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Currently, I'm learning AWS services and this portfolio is an attempt at that.
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/aman-rastogi-dev/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/aman-rastogi" target="_blank"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="assets/Resume_Salil_Tari.pdf" target="_blank"><i img src="https://img.icons8.com/ios/50/000000/open-resume.png"></i></a>
+                        <a class="social-icon" href="assets/Aman_Rastogi_Resume.pdf" target="_blank"><i class="fas fa-file-downloadn"></i></a>
                     </div>
                 </div>
             </section>
@@ -153,7 +153,7 @@ Currently, I'm learning AWS services and this portfolio is an attempt at that.
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Jaypee University of Information Technology</h3>
-                            <div class="subheading mb-3">Bachelor of Engineering</div>
+                            <div class="subheading mb-3">Bachelor of Technology</div>
                             <div>Information Technology</div>
                             <p>GPA: 7.6/10.0</p>
                         </div>
@@ -256,7 +256,7 @@ Currently, I'm learning AWS services and this portfolio is an attempt at that.
                                 <li>Extracted real-time data from Twitter using a python script running on EC2 with the help of libraries Tweepy and Boto3</li>
                                 <li>Used Kinesis Firehose delivery stream to capture the streaming data and AWS Lambda to call the Comprehend service for generating the sentiment information</li>
                                 <li>Loaded the transformed data into Elastic Search Cluster and visualized it using Kibana</li                                
-                            </p>
+                                </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2020</span></div>
                     </div>
